fix(authz): harden permission me fallback response